# AngelOne-SmartAPI

./: .gitignore  CurrentDay.py  Historical.py  README.md  data_fetcher.py  payload.json  requirements.txt  today_5m.json
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  smartapi_utils.py
